Fix scrollbar bug

--- a/website/src/app/app.component.css
+++ b/website/src/app/app.component.css
@@ -1,5 +1,5 @@
 .wizardli-content {
-  overflow: scroll;
+  overflow: auto;
   position: fixed;
   left: 0;
   right: 0;
